crates/pgls_pretty_print/tests/snapshots/multi/tests__test_setup_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/test_setup.sql
---
set synchronous_commit = 'on';

grant all on schema public to public;

set allow_in_place_tablespaces = 'true';

create tablespace regress_tblspace location '';

create table char_tbl (f1 char(4));

insert into char_tbl (f1) values ('a'), ('ab'), ('abcd'), ('abcd    ');

vacuum char_tbl;

create table float8_tbl (f1 double precision);

insert into float8_tbl (f1)
values
  ('0.0'),
  ('-34.84'),
  ('-1004.30'),
  ('-1.2345678901234e+200'),
  ('-1.2345678901234e-200');

vacuum float8_tbl;

create table int2_tbl (f1 smallint);

insert into int2_tbl (f1) values ('0   '), ('  1234 '), ('    -1234'), ('32767'), ('-32767');

vacuum int2_tbl;

create table int4_tbl (f1 int);

insert into int4_tbl (f1)
values
  ('   0  '),
  ('123456     '),
  ('    -123456'),
  ('2147483647'),
  ('-2147483647');

vacuum int4_tbl;

create table int8_tbl (
  q1 bigint,
  q2 bigint
);

insert into int8_tbl
values
  ('  123   ', '  456'),
  ('123   ', '4567890123456789'),
  ('4567890123456789', '123'),
  (+4567890123456789, '4567890123456789'),
  ('+4567890123456789', '-4567890123456789');

vacuum int8_tbl;

create table point_tbl (f1 point);

insert into point_tbl (f1)
values
  ('(0.0,0.0)'),
  ('(-10.0,0.0)'),
  ('(-3.0,4.0)'),
  ('(5.1, 34.5)'),
  ('(-5.0,-12.0)'),
  ('(1e-300,-1e-300)'),
  ('(1e+300,Inf)'),
  ('(Inf,1e+300)'),
  (' ( Nan , NaN ) '),
  ('10.0,10.0');

create table text_tbl (f1 text);

insert into text_tbl values ('doh!'), ('hi de ho neighbor');

vacuum text_tbl;

create table varchar_tbl (f1 varchar(4));

insert into varchar_tbl (f1) values ('a'), ('ab'), ('abcd'), ('abcd    ');

vacuum varchar_tbl;

create table onek (
  unique1 int,
  unique2 int,
  two int,
  four int,
  ten int,
  twenty int,
  hundred int,
  thousand int,
  twothousand int,
  fivethous int,
  tenthous int,
  odd int,
  even int,
  stringu1 name,
  stringu2 name,
  string4 name
);

copy onek from 'filename';

vacuum (ANALYZE) onek;

create table onek2 as select * from onek;

vacuum (ANALYZE) onek2;

create table tenk1 (
  unique1 int,
  unique2 int,
  two int,
  four int,
  ten int,
  twenty int,
  hundred int,
  thousand int,
  twothousand int,
  fivethous int,
  tenthous int,
  odd int,
  even int,
  stringu1 name,
  stringu2 name,
  string4 name
);

copy tenk1 from 'filename';

vacuum (ANALYZE) tenk1;

create table tenk2 as select * from tenk1;

vacuum (ANALYZE) tenk2;

create table person (
  name text,
  age int,
  location point
);

copy person from 'filename';

vacuum (ANALYZE) person;

create table emp (
  salary int,
  manager name
)
inherits (person);

copy emp from 'filename';

vacuum (ANALYZE) emp;

create table student (gpa double precision)
inherits (person);

copy student from 'filename';

vacuum (ANALYZE) student;

create table stud_emp (percent int)
inherits (emp,
student);

copy stud_emp from 'filename';

vacuum (ANALYZE) stud_emp;

create table road (
  name text,
  thepath path
);

copy road from 'filename';

vacuum (ANALYZE) road;

create table ihighway ()
inherits (road);

insert into ihighway select * from only road where name ~ 'I- .*';

vacuum (ANALYZE) ihighway;

create table shighway (surface text)
inherits (road);

insert into shighway select *, 'asphalt' from only road where name ~ 'State Hwy.*';

vacuum (ANALYZE) shighway;

create type stoplight as enum ('red', 'yellow', 'green');

create type float8range as range (subtype = double precision, subtype_diff = float8mi);

create type textrange as range (subtype = text, collation = "C");

create function binary_coercible(oid, oid)
returns boolean
language c
stable
strict
parallel SAFE
as 'regresslib', 'binary_coercible';

create function part_hashint4_noop(value int, seed bigint)
returns bigint
language sql
immutable
strict
parallel SAFE
as $function$
select value + seed;
$function$;

create operator class part_test_int4_ops
  for type int
  using hash
  as operator 1 =,
  function 2 part_hashint4_noop(int, bigint);

create function part_hashtext_length(value text, seed bigint)
returns bigint
language sql
immutable
strict
parallel SAFE
as $function$
select length(coalesce(value, ''))::int8
$function$;

create operator class part_test_text_ops
  for type text
  using hash
  as operator 1 =,
  function 2 part_hashtext_length(text, bigint);

create function fipshash(bytea)
returns text
immutable
leakproof
strict
parallel SAFE
return substr(encode(sha256($1), 'hex'), 1, 32);

create function fipshash(text)
returns text
immutable
leakproof
strict
parallel SAFE
return substr(
  encode(sha256(cast($1 as bytea)), 'hex'),
  1,
  32
);
