crates/pgls_pretty_print/tests/snapshots/multi/tests__text_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/text.sql
snapshot_kind: text
---
SELECT
  CAST('this is a text string' AS TEXT) =
  CAST('this is a text string' AS TEXT)
  AS "true";

SELECT
  CAST('this is a text string' AS TEXT) =
  CAST('this is a text strin' AS TEXT)
  AS "false";

SELECT * FROM text_tbl;

SELECT length(42);

SELECT CAST('four: ' AS TEXT) || 2 + 2;

SELECT 'four: ' || 2 + 2;

SELECT 3 || 4.0;

SELECT concat('one');

SELECT concat(1, 2, 3, 'hello', TRUE, FALSE, to_date('20100309', 'YYYYMMDD'));

SELECT concat_ws('#', 'one');

SELECT
  concat_ws(
    '#',
    1,
    2,
    3,
    'hello',
    TRUE,
    FALSE,
    to_date('20100309', 'YYYYMMDD')
  );

SELECT concat_ws(',', 10, 20, NULL, 30);

SELECT concat_ws('', 10, 20, NULL, 30);

SELECT concat_ws(NULL, 10, 20, NULL, 30) IS NULL;

SELECT reverse('abcde');

SELECT
  i,
  left('ahoj', i),
  right('ahoj', i)
FROM
  generate_series(-5, 5) AS t (i)
ORDER BY i;

SELECT quote_literal('');

SELECT quote_literal('abc''');

SELECT quote_literal('\');

SELECT concat(VARIADIC ARRAY[1, 2, 3]);

SELECT concat_ws(',', VARIADIC ARRAY[1, 2, 3]);

SELECT concat_ws(',', VARIADIC CAST(NULL AS INT[]));

SELECT concat(VARIADIC CAST(NULL AS INT[])) IS NULL;

SELECT concat(VARIADIC CAST('{}' AS INT[])) = '';

SELECT concat_ws(',', VARIADIC 10);

SELECT format(NULL);

SELECT format('Hello');

SELECT format('Hello %s', 'World');

SELECT format('Hello %%');

SELECT format('Hello %%%%');

SELECT format('Hello %s %s', 'World');

SELECT format('Hello %s');

SELECT format('Hello %x', 20);

SELECT format('INSERT INTO %I VALUES(%L,%L)', 'mytab', 10, 'Hello');

SELECT format('%s%s%s', 'Hello', NULL, 'World');

SELECT format('INSERT INTO %I VALUES(%L,%L)', 'mytab', 10, NULL);

SELECT format('INSERT INTO %I VALUES(%L,%L)', 'mytab', NULL, 'Hello');

SELECT format('INSERT INTO %I VALUES(%L,%L)', NULL, 10, 'Hello');

SELECT format('%1$s %3$s', 1, 2, 3);

SELECT format('%1$s %12$s', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);

SELECT format('%1$s %4$s', 1, 2, 3);

SELECT format('%1$s %13$s', 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);

SELECT format('%0$s', 'Hello');

SELECT format('%*0$s', 'Hello');

SELECT format('%1$', 1);

SELECT format('%1$1', 1);

SELECT format('Hello %s %1$s %s', 'World', 'Hello again');

SELECT format('Hello %s %s, %2$s %2$s', 'World', 'Hello again');

SELECT format('%s, %s', VARIADIC ARRAY['Hello', 'World']);

SELECT format('%s, %s', VARIADIC ARRAY[1, 2]);

SELECT format('%s, %s', VARIADIC ARRAY[TRUE, FALSE]);

SELECT format('%s, %s', VARIADIC CAST(ARRAY[TRUE, FALSE] AS TEXT[]));

SELECT format('%2$s, %1$s', VARIADIC ARRAY['first', 'second']);

SELECT format('%2$s, %1$s', VARIADIC ARRAY[1, 2]);

SELECT format('Hello', VARIADIC CAST(NULL AS INT[]));

SELECT
  format(
    string_agg('%s', ','),
    VARIADIC array_agg(i)
  )
FROM
  generate_series(1, 200) AS g (i);

SELECT format('>>%10s<<', 'Hello');

SELECT format('>>%10s<<', NULL);

SELECT format('>>%10s<<', '');

SELECT format('>>%-10s<<', '');

SELECT format('>>%-10s<<', 'Hello');

SELECT format('>>%-10s<<', NULL);

SELECT format('>>%1$10s<<', 'Hello');

SELECT format('>>%1$-10I<<', 'Hello');

SELECT format('>>%2$*1$L<<', 10, 'Hello');

SELECT format('>>%2$*1$L<<', 10, NULL);

SELECT format('>>%2$*1$L<<', -10, NULL);

SELECT format('>>%*s<<', 10, 'Hello');

SELECT format('>>%*1$s<<', 10, 'Hello');

SELECT format('>>%-s<<', 'Hello');

SELECT format('>>%10L<<', NULL);

SELECT format('>>%2$*1$L<<', NULL, 'Hello');

SELECT format('>>%2$*1$L<<', 0, 'Hello');
